wekan/wekan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wekan-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  
spec:
  rules:
  - host: wekan.beta.numerique.gouv.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wekan-dinum
            port:
              number: 8080
  tls:
  - hosts:
    - wekan.beta.numerique.gouv.fr
    secretName: betanum
